welcome.lessons.welcome.array.has271.Has271.scala.error
has271:2: error: identifier expected but integer literal found.
  if (nums == [2,7,3]) {return true}
               ^has271:7: error: ']' expected but '}' found.
} 
^has271:2: error: type application is not allowed for postfix operators
  if (nums == [2,7,3]) {return true}
           ^